--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
     </nav>
     <!-- lntro content -->
     <!-- image -->
-     <img class="absolute bottom-0 sm:-right-8 sm:h-3/4 lg:left-0 lg:mx-auto object-cover h-5/6" src="image/ad2.png" alt="">
+     <img class="absolute bottom-0 sm:-right-8 sm:h-3/4 lg:left-0 lg:mx-auto object-cover" src="image/ad2.png" alt="">
     <!-- circle -->
     <div class="lg:block md:hidden sm:hidden absolute -bottom-1/4 right-0 left-0 mx-auto w-big h-big bg-indigo-900 rounded-full -z-10"></div>
     <!-- animated text for sm -->
-    <div class="lg:hidden md:hidden absolute top-1/3  sm:left-0 text-xl sm:text-3xl md:-left-1/4 md:text-6xl lg:left-5 xl:left-7 xl:text-1/6xl font-bold">
-      <span class="text-gray-600">Frelancer</span>
+    <div class="lg:hidden md:hidden absolute top-1/3  sm:left-0 text-2xl sm:text-3xl md:-left-1/4 md:text-6xl lg:left-5 xl:left-7 xl:text-1/6xl font-bold">
+      <span class="text-gray-600">Freelancer</span>
       <p id="smautotyping" class="text-red-500"></p>
      </div>
     <!-- animated text -->
      <div class="sm:hidden lg:block md:block absolute top-1/3 text-xl md:left-1 md:text-6xl lg:left-5 xl:left-7 xl:text-1/6xl font-bold">
-      <span class="text-gray-600">Frelancer</span>
+      <span class="text-gray-600">Freelancer</span>
       <p class="autotyping text-red-500"></p>
      </div>
      
@@ -83,7 +83,7 @@
   </div>
   <!-- about section -->
   <div class="px-10">
-    <div class="container py-40 mx-auto flex flex-col-reverse lg:flex-row items-center gap-20">
+    <div class="container py-10s mx-auto flex flex-col-reverse lg:flex-row items-center gap-20">
       <!-- right -->
       <div class="relative">
         <img class="h-1/4 absolute top-0 left-0 -z-10" src="./image/dot.jpg" alt="">
@@ -92,7 +92,7 @@
         </div>
       </div>
       <!-- left -->
-      <div class="my-auto flex flex-col gap-3 ">
+      <div class="my-10 flex flex-col gap-3 sm:py-5 py-50">
         <h1 class="text-indigo-600 text-3xl font-bold uppercase">About Me</h1>
         <h1 class="text-3xl font-medium">Better Design</h1>
         <h1 class="text-3xl font-medium">Better Experience</h1>
@@ -120,7 +120,7 @@
   </div>
   <!-- services -->
    <div class="container mx-auto">
-    <div class="flex flex-col gap-3 items-center">
+    <div class="flex flex-col gap-3 sm:py-20 py-40 items-center">
       <!-- top -->
       <h1 class="text-indigo-600 text-3xl font-bold uppercase">Portfolio</h1>
       <h1 class="text-3xl">Work and Projects</h1>
@@ -181,7 +181,7 @@
     </div>
   </div>
   <!-- work -->
-  <div class="container mx-auto py-40">
+  <div class="container mx-auto sm:py-5 py-40">
     <div class="flex flex-col gap-3 items-center">
       <!-- top -->
       <h1 class="text-indigo-600 text-3xl font-bold uppercase">services</h1>
@@ -234,7 +234,7 @@
     <div class="container mx-auto px-10">
       <div class="flex flex-col gap-3 items-center">
         <!-- top -->
-        <h1 class="text-indigo-600 text-3xl font-bold uppercase">contact</h1>
+        <h1 class="text-indigo-600 text-3xl font-bold sm:py-5 uppercase">contact</h1>
         <h1 class="text-3xl">What do I offer</h1>
         <p class="w-1/2 text-center text-gray-400">
           Crafting innovative solutions as a web developer and software developer,
