--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
   <!-- about section -->
   <div class="px-10">
-    <div class="container py-10s mx-auto flex flex-col-reverse lg:flex-row items-center gap-20">
+    <div class="container py-20 mx-auto flex flex-col-reverse lg:flex-row items-center gap-20">
       <!-- right -->
       <div class="relative">
         <img class="h-1/4 absolute top-0 left-0 -z-10" src="./image/dot.jpg" alt="">
